<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.ProfileActivity">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/_10sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_background">

                <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:layout_width="@dimen/_135sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_text"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_top"
        app:cardElevation="@dimen/_5sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:background="@drawable/custom_background" />
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/cv_bottom_main"
        android:layout_below="@id/cv_point"
        android:background="@color/white"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_90sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:id="@+id/civ_avatarProfile"
                android:src="@drawable/ic_launcher_background"
                android:layout_margin="@dimen/_15sdp" />
            <TextView
                android:id="@+id/tv_nameProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ICT Team"
                android:textStyle="bold"
                android:fontFamily="@font/avant_garde_bold"
                android:textColor="@color/dim_back"
                android:textSize="@dimen/_13ssp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/dim_back"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/points"
                android:textSize="@dimen/_13ssp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:src="@drawable/ic_thunder_blue"/>
                <TextView
                    android:id="@+id/tv_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="77"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_40ssp"
                    android:fontFamily="@font/nahia"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/dim_back"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp" />
            <RelativeLayout
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rl_history">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/HISTORY"
                    android:textSize="@dimen/_13ssp" />

                <ImageView
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="@dimen/_17sdp"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/dim_back"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp" />
            <RelativeLayout
                android:id="@+id/rl_contactAdmin"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/contactAdmin"
                    android:textSize="@dimen/_13ssp" />

                <ImageView
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="@dimen/_17sdp"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_logOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/avant_garde_bold"
                android:text="@string/logOut"
                android:textColor="@color/blue"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:cardElevation="@dimen/_10sdp"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:fontFamily="@font/avant_garde"
                android:gravity="center"
                android:text="@string/PROFILE"
                android:textColor="@color/blue"
                android:textSize="@dimen/_18ssp" />
            <ImageView
                android:layout_marginLeft="@dimen/_5sdp"
                android:id="@+id/iv_back"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_back" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>